# cortex-sdk

./: .gitignore  CLAUDE.md  CORTEX-Claude-CLI-Workflow.md  README.md  pyproject.toml
cortex/: pipeline.py
cortex/capture/: __init__.py  blur_detector.py  engine.py  imu_gate.py  scene_change.py
cortex/compiler/: __init__.py  boundaries.md  compiler.py  saliency_kernel.py
cortex/graph/: __init__.py  builder.py  graph.py  node.py  passes.py  visualizer.py
cortex/memory/: __init__.py  context_store.py  frame_describer.py  injector.py  retriever.py  summarizer.py
cortex/optimizer/: center_crop.py  classifier.py  encoder.py  hybrid_roi.py  saliency_roi.py  text_roi.py
examples/: compiler_benchmark.py  demo_compiler.py  demo_graph_ir.py  demo_graph_live.py  profiling_report.txt  test_all_webcam.py  test_blur_webcam.py  test_capture_webcam.py  test_imu_webcam.py  webcam_demo.py
tests/capture/: test_blur_detector.py  test_engine.py  test_imu_gate.py  test_scene_change.py
tests/compiler/: test_compiler.py  test_saliency_kernel.py
tests/graph/: test_graph.py  test_node.py  test_passes.py  test_visualizer.py
tests/memory/: test_context_store.py  test_injector.py  test_retriever.py  test_summarizer.py
tests/optimizer/: test_center_crop.py  test_classifier.py  test_encoder.py  test_hybrid_roi.py  test_saliency_roi.py  test_text_roi.py
